--- a/bootstrap_babson/css/styles.css
+++ b/bootstrap_babson/css/styles.css
@@ -12,13 +12,13 @@ body {
     background-color: hsla(0, 0%, 93%, .4);
     border: 1px solid #bbb;
 }
-
+/*
 nav ul {
     list-style: none;
  /*   background-color: #050;
     width: 1000px;
     width: 640px;
-    height: 40px*/
+    height: 40px
     margin-left: auto;
     margin-right: auto;
     padding-top: 10px;
@@ -44,7 +44,7 @@ nav ul li a:hover {
 
 nav ul li:first-child {
     margin-left: 300px;
-}
+} */
 
 div#container {
     width: 100%;
@@ -65,7 +65,6 @@ div#right_bar {
 }
 
 div#content {
-    width: calc(100% - 20em);
     background-color: #eee; 
     background-color: #fff;
     border: 1px solid #bbb;
@@ -92,9 +91,8 @@ blockquote {
     width: 8em;
 }
 
-footer {
+#footer {
     text-align: center;
-    border-top: 1px solid #000;
 }
 
 label {
@@ -174,4 +172,8 @@ font-size: 18px;
 
 .required {
     border: 2px solid blue;
+}
+
+.white-bg {
+    background-color: white;
 }
